- added -isfunction predicate to check if a scalar contains a function or not
- added &invoke(&function, @args, [message]) to invoke a function with @args
  passed as individual arguments.
- updated &setField to accept key/value pair arguments where the key specifies
  the field to update and the argument the value, any number of args can be
  specified.  this breaks to behavor set in 2.1-b6


2.1-beta 6  (1 Oct 06)
===========
- added named parameters for Sleep closures.  When a $key => value argument is
  passed to a sleep closure the value will be installed into the local scope of
  the function as variable $key.  This breaks the old behavior which was to 
  convert the key/value pair into a string i.e. $key=value
- improved function call traceing to detect when a function call failed and to
  indicate that such an event occured.
- coroutines are now allowed to call themselves in a recursive manner
- when yield is called, the local variable state is preserved until the 
  coroutine is called again (only when the coroutine is reset, i.e. exited w/o
  a yield is the local variable state dropped).
- added an error check for attempts to pack odd length hex strings
- parser now throws an error if a jar file specified with import * from: is not
  found.
- added a &setField(class|$object, "field", value) function for setting the 
  value of a field in a Java class or object.
- added &setf('&function', { closure }) for setting a named closure (i.e. a 
  subroutine).
- closure this scope is now associated directly with the closure itself and not
  just its script environment.  the implication of this is passing a closure
  to a fork will carry the closure this scope with it as well (and also the
  local scope in the case of a partially executed coroutine).
- added semaphore synchronization primitive to the sleep language:

  # initialize a semaphore
  $semaphore = semaphore([initial count]);

  # acquire the semaphore
  acquire($semaphore);

  # release the semaphore